use sass-middleware, use autoprefixer, update babel

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "serve the project with npm scripts",
   "main": "server/app.js",
   "scripts": {
-    "dev": "npm run pre && npm run asset && npm run image && npm run sass && npm run sass-watch & npm run webpack-dev & npm run serve-dev",
-    "prod": "npm run pre && npm run asset && npm run webpack-prod && npm run sass && npm run image-tiny && exit 0",
+    "dev": "npm-run-all pre --parallel asset image webpack-dev serve-dev",
+    "prod": "npm run pre && npm run asset && npm run webpack-prod && npm run sass && npm run postcss && npm run image-tiny && exit 0",
     "serve-dev": "pm2-dev ./server/pm2-dev.json",
     "serve": "pm2 start ./server/pm2-prod.json",
     "pre": "rimraf ./client/dist && mkdirp ./client/dist && mkdirp ./client/dist/static && mkdirp ./client/dist/static/img && mkdirp ./client/dist/static/css && mkdirp ./client/dist/static/js",
     "webpack-dev": "node ./client/build/dev-server.js",
     "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config ./client/build/webpack.prod.conf.js",
     "sass": "node-sass --output-style compressed --source-map ./client/dist/static/css --source-map-contents ./client/static/css -o ./client/dist/static/css",
-    "sass-watch": "node-sass -w -r --output-style compressed --source-map ./client/dist/static/css --source-map-contents ./client/static/css -o ./client/dist/static/css",
+    "postcss": "postcss --config postcss.json --replace ./client/dist/static/css/**/*.css",
     "asset": "ncp ./client/asset ./client/dist/static",
     "image": "ncp ./client/static/img ./client/dist/static/img",
     "image-tiny": "imagemin ./client/static/img ./client/dist/static/img",
@@ -21,6 +21,8 @@
   "author": "Jason Deng",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.7.7",
+    "extend": "^3.0.0",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.0.1",
     "koa-compress": "^1.0.9",
@@ -32,12 +34,13 @@
     "koa-static": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-runtime": "^5.8.0",
+    "autoprefixer": "^6.3.6",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-runtime": "^5.8.38",
     "chromedriver": "^2.21.2",
     "cross-env": "^1.0.7",
     "eslint": "^2.0.0",
@@ -53,10 +56,13 @@
     "glob": "^7.0.3",
     "imagemin-cli": "^2.1.0",
     "json-loader": "^0.5.4",
+    "koa-sass-middleware": "^1.0.0",
     "koa-webpack-dev-middleware": "^1.2.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^3.6.0",
+    "npm-run-all": "^1.8.0",
+    "postcss-cli": "^2.5.2",
     "rimraf": "^2.5.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
