--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "scripts": {
-    "dev": "npm-run-all pre --parallel asset image webpack-dev serve-dev",
-    "prod": "npm run pre && npm run asset && npm run webpack-prod && npm run sass && npm run postcss && npm run image-tiny && exit 0",
+    "dev": "npm-run-all pre --parallel asset image serve-client serve-dev",
+    "build-exp": "npm-run-all pre asset webpack-exp sass postcss image-tiny",
+    "build": "npm-run-all pre asset webpack-prod sass postcss image-tiny",
+    "serve-client": "cross-env NODE_ENV=development node ./client/build/dev-server.js",
     "serve-dev": "pm2-dev ./server/pm2-dev.json",
+    "serve-exp": "pm2 start ./server/pm2-exp.json",
     "serve": "pm2 start ./server/pm2-prod.json",
     "pre": "rimraf ./client/dist && mkdirp ./client/dist && mkdirp ./client/dist/static && mkdirp ./client/dist/static/img && mkdirp ./client/dist/static/css && mkdirp ./client/dist/static/js",
-    "webpack-dev": "node ./client/build/dev-server.js",
-    "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config ./client/build/webpack.prod.conf.js",
+    "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
+    "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
     "sass": "node-sass --output-style compressed --source-map ./client/dist/static/css --source-map-contents ./client/static/css -o ./client/dist/static/css",
     "postcss": "postcss --config postcss.json --replace ./client/dist/static/css/**/*.css",
     "asset": "ncp ./client/asset ./client/dist/static",
     "image": "ncp ./client/static/img ./client/dist/static/img",
     "image-tiny": "imagemin ./client/static/img ./client/dist/static/img",
-    "pack": "node client/build/zip.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pack": "node client/build/zip.js"
   },
   "author": "Jason Deng",
   "license": "MIT",
