--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.1.0",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
+  "homepage": "https://github.com/dnxbf321/node-project-template#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://dnxbf321@github.com/dnxbf321/node-project-template.git"
+  },
+  "author": "Jason Deng",
+  "license": "MIT",
   "scripts": {
     "dev": "npm-run-all pre --parallel asset image serve-client serve-dev",
     "build-exp": "npm-run-all pre asset webpack-exp sass postcss image-tiny",
@@ -21,8 +28,6 @@
     "image-tiny": "imagemin ./client/static/img ./client/dist/static/img",
     "pack": "node client/build/zip.js"
   },
-  "author": "Jason Deng",
-  "license": "MIT",
   "dependencies": {
     "babel-core": "^6.7.7",
     "extend": "^3.0.0",
