--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -12,27 +12,25 @@
   "license": "MIT",
   "scripts": {
     "dev": "npm-run-all pre --parallel asset image serve-client serve-dev",
-    "build-exp": "npm-run-all pre asset webpack-exp sass postcss image-tiny",
-    "build": "npm-run-all pre asset webpack-prod sass postcss image-tiny",
+    "build-exp": "npm-run-all pre asset webpack-exp postcss image-tiny",
+    "build": "npm-run-all pre asset webpack-prod postcss image-tiny",
     "serve-client": "cross-env NODE_ENV=development node ./client/build/dev-server.js",
     "serve-dev": "pm2-dev ./server/pm2-dev.json",
     "serve-exp": "pm2 start ./server/pm2-exp.json",
     "serve": "pm2 start ./server/pm2-prod.json",
-    "pre": "rimraf ./client/dist && mkdirp ./client/dist && mkdirp ./client/dist/static && mkdirp ./client/dist/static/img && mkdirp ./client/dist/static/css && mkdirp ./client/dist/static/js",
+    "pre": "rimraf ./client/dist && mkdirp ./client/dist/static/img && mkdirp ./client/dist/static/css && mkdirp ./client/dist/static/js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
     "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
-    "sass": "node-sass --output-style compressed --source-map ./client/dist/static/css --source-map-contents ./client/static/css -o ./client/dist/static/css",
-    "postcss": "postcss --config postcss.json --replace ./client/dist/static/css/**/*.css",
+    "postcss": "postcss --no-map.inline --config ./bin/postcss.json ./client/static/**/[^_]*.css -d ./client/dist/static/css",
     "asset": "ncp ./client/asset ./client/dist/static",
     "image": "ncp ./client/static/img ./client/dist/static/img",
     "image-tiny": "imagemin ./client/static/img ./client/dist/static/img",
-    "pack": "node client/build/zip.js"
+    "pack": "node bin/zip.js",
+    "ftp": "node bin/ftp.js"
   },
   "dependencies": {
-    "babel-core": "^6.7.7",
-    "extend": "^3.0.0",
     "koa": "^1.2.0",
-    "koa-bodyparser": "^2.0.1",
+    "koa-bodyparser": "^2.2.0",
     "koa-compress": "^1.0.9",
     "koa-hbs": "^0.8.0",
     "koa-logger": "^1.3.0",
@@ -42,38 +40,44 @@
     "koa-static": "^2.0.0"
   },
   "devDependencies": {
+    "archiver": "^1.0.0",
     "autoprefixer": "^6.3.6",
+    "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^5.8.38",
     "chromedriver": "^2.21.2",
-    "cross-env": "^1.0.7",
-    "eslint": "^2.0.0",
-    "eslint-config-standard": "^5.1.0",
+    "cross-env": "^1.0.8",
+    "cssnano": "^3.6.2",
+    "eslint": "^2.11.1",
+    "eslint-config-standard": "^5.3.1",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-html": "^1.5.1",
+    "eslint-plugin-promise": "^1.3.1",
     "eslint-plugin-standard": "^1.3.2",
     "eventsource-polyfill": "^0.9.6",
+    "extend": "^3.0.0",
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "glob": "^7.0.3",
     "imagemin-cli": "^2.1.0",
     "json-loader": "^0.5.4",
-    "koa-sass-middleware": "^1.0.0",
-    "koa-webpack-dev-middleware": "^1.2.0",
+    "koa-postcss-middleware": "^1.0.0",
+    "koa-webpack-dev-middleware": "^1.2.1",
     "mkdirp": "^0.5.1",
+    "moment": "^2.13.0",
     "ncp": "^2.0.0",
-    "node-sass": "^3.6.0",
     "npm-run-all": "^1.8.0",
     "postcss-cli": "^2.5.2",
+    "precss": "^1.4.0",
     "rimraf": "^2.5.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.2",
+    "vinyl-ftp": "^0.4.5",
+    "webpack": "^1.13.1",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3"
   }
