--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -75,8 +75,8 @@
     "postcss-cli": "^2.5.2",
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
+    "scp2": "^0.5.0",
     "url-loader": "^0.5.7",
-    "vinyl-ftp": "^0.4.5",
     "webpack": "^1.13.1",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3"
