优化目录结构

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -14,19 +14,19 @@
     "dev": "npm-run-all pre --parallel asset image serve-client serve-dev",
     "build-exp": "npm-run-all pre asset webpack-exp postcss image-tiny",
     "build": "npm-run-all pre asset webpack-prod postcss image-tiny",
-    "serve-client": "cross-env NODE_ENV=development node ./client/build/dev-server.js",
-    "serve-dev": "pm2-dev ./server/pm2-dev.json",
-    "serve-exp": "pm2 start ./server/pm2-exp.json",
-    "serve": "pm2 start ./server/pm2-prod.json",
-    "pre": "rimraf ./client/dist && mkdirp ./client/dist/static/img && mkdirp ./client/dist/static/css && mkdirp ./client/dist/static/js",
-    "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
-    "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config client/build/webpack.prod.conf.js",
-    "postcss": "postcss --no-map.inline --config ./bin/postcss.json ./client/static/**/[^_]*.css -d ./client/dist/static/css",
-    "asset": "ncp ./client/asset ./client/dist/static",
-    "image": "ncp ./client/static/img ./client/dist/static/img",
-    "image-tiny": "imagemin ./client/static/img ./client/dist/static/img",
-    "pack": "node bin/zip.js",
-    "ftp": "node bin/ftp.js"
+    "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
+    "serve-dev": "pm2-dev scripts/conf/pm2-dev.json",
+    "serve-exp": "pm2 start scripts/conf/pm2-exp.json",
+    "serve": "pm2 start scripts/conf/pm2-prod.json",
+    "pre": "rimraf client/dist && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
+    "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
+    "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
+    "postcss": "postcss --no-map.inline --config scripts/conf/postcss.json client/static/**/[^_]*.css -d client/dist/static/css",
+    "asset": "ncp client/asset client/dist/static",
+    "image": "ncp client/static/img client/dist/static/img",
+    "image-tiny": "imagemin client/static/img client/dist/static/img",
+    "pack": "node scripts/task/pack.js",
+    "upload": "node scripts/task/upload.js"
   },
   "dependencies": {
     "koa": "^1.2.0",
