--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.4.0",
+  "version": "1.4.2",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -11,7 +11,7 @@
   "author": "Jason Deng",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all pre --parallel asset image serve-client serve-dev",
+    "dev": "npm-run-all pre --parallel asset image serve-client serve-dev-log",
     "build-dev": "npm-run-all pre asset webpack-dev postcss image-tiny",
     "build-exp": "npm-run-all pre asset webpack-exp postcss image-tiny",
     "build": "npm-run-all pre asset webpack-prod postcss image-tiny",
@@ -41,7 +41,8 @@
     "koa-onerror": "^1.3.1",
     "koa-router": "^5.4.0",
     "koa-session": "^3.3.1",
-    "koa-static": "^2.0.0"
+    "koa-static": "^2.0.0",
+    "vue": "^1.0.24"
   },
   "devDependencies": {
     "archiver": "^1.0.0",
@@ -52,9 +53,10 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-runtime": "^5.8.38",
+    "babel-runtime": "^6.9.2",
     "chromedriver": "^2.21.2",
     "cross-env": "^1.0.8",
+    "css-loader": "^0.23.1",
     "cssnano": "^3.6.2",
     "eslint": "^2.11.1",
     "eslint-config-standard": "^5.3.1",
@@ -65,6 +67,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "eventsource-polyfill": "^0.9.6",
     "extend": "^3.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "glob": "^7.0.3",
@@ -77,12 +80,17 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^1.8.0",
     "postcss-cli": "^2.5.2",
+    "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
     "scp2": "^0.5.0",
     "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.5.2",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.1",
     "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3"
+    "webpack-merge": "^0.14.0"
   }
 }
