--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.9.2",
     "chromedriver": "^2.21.2",
+    "colors": "^1.1.2",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "cssnano": "^3.6.2",
@@ -73,6 +74,7 @@
     "glob": "^7.0.3",
     "imagemin-cli": "^2.1.0",
     "json-loader": "^0.5.4",
+    "koa-connect-history-api-fallback": "^0.3.0",
     "koa-postcss-middleware": "^1.0.0",
     "koa-webpack-dev-middleware": "^1.2.1",
     "mkdirp": "^0.5.1",
