--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-router": "^5.4.0",
     "koa-session": "^3.3.1",
     "koa-static": "^2.0.0",
+    "koa-proxy": "^0.6.0",
     "vue": "^1.0.24"
   },
   "devDependencies": {
