--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -74,6 +74,8 @@
     "file-loader": "^0.8.4",
     "function-bind": "^1.0.2",
     "glob": "^7.0.3",
+    "handlebars-loader": "^1.3.0",
+    "html-webpack-plugin": "^2.21.0",
     "imagemin-cli": "^2.1.0",
     "json-loader": "^0.5.4",
     "koa-connect-history-api-fallback": "^0.3.0",
