--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
     "scp2": "^0.5.0",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
