--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
     "serve-exp": "pm2 start scripts/conf/pm2-exp.json",
     "serve": "pm2 start scripts/conf/pm2-prod.json",
-    "pre": "rimraf client/dist && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
+    "pre": "rimraf client/dist && rimraf jsdoc && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
     "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
@@ -31,7 +31,7 @@
     "image-tiny": "imagemin client/static/img client/dist/static/img",
     "pack": "node scripts/task/pack.js",
     "upload": "node scripts/task/upload.js",
-    "clean": "rimraf client/dist && rimraf zip"
+    "clean": "rimraf client/dist && rimraf zip && rimraf jsdoc"
   },
   "dependencies": {
     "koa": "^1.2.0",
@@ -77,6 +77,7 @@
     "handlebars-loader": "^1.3.0",
     "html-webpack-plugin": "^2.21.0",
     "imagemin-cli": "^2.1.0",
+    "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "^0.5.4",
     "koa-connect-history-api-fallback": "^0.3.0",
     "koa-postcss-middleware": "^1.0.0",
