--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "develop the project based on npm scripts",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -87,11 +87,15 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^1.8.0",
     "postcss-cli": "^2.5.2",
+    "postcss-easy-import": "^1.0.1",
     "postcss-loader": "^0.9.1",
+    "postcss-reporter": "^1.3.3",
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
     "scp2": "^0.5.0",
     "style-loader": "^0.13.1",
+    "stylelint": "^6.7.1",
+    "stylelint-config-standard": "^9.0.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
