pattern 指定要上传的目录，keepFinder 是否保持目录结构

--- a/config.json
+++ b/config.json
@@ -4,7 +4,9 @@
     "port": 22,
     "username": "root",
     "password": "First@2015++",
-    "remotePath": "/home/frontend/workspace/node-project-template"
+    "remotePath": "/home/frontend/workspace/node-project-template",
+    "patterns": ["client/dist"],
+    "keepFinder": true
   },
   "default": {
     "version": 1461547380716,
