--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "postcss": "postcss --no-map.inline --config scripts/conf/postcss.json client/static/**/[^_]*.css -d client/dist/static/css",
+    "postcss": "postcss --no-map.inline --config scripts/conf/postcss.json client/static/css/**/[!_]*.css -d client/dist/static/css",
     "asset": "ncp client/asset client/dist/static",
     "image": "ncp client/static/img client/dist/static/img",
     "image-tiny": "imagemin client/static/img client/dist/static/img",
@@ -56,7 +56,6 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.9.2",
-    "chromedriver": "^2.21.2",
     "colors": "^1.1.2",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
