--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "scripts": {
     "help": "node scripts/task/help.js",
-    "dev": "npm-run-all pre --parallel asset image serve-client serve-dev-log",
-    "build-dev": "npm-run-all pre asset webpack-dev postcss image-tiny",
-    "build-exp": "npm-run-all pre asset webpack-exp postcss image-tiny",
-    "build": "npm-run-all pre asset webpack-prod postcss image-tiny",
+    "dev": "npm-run-all pre htmlhint --parallel asset image serve-client serve-dev-log",
+    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss image-tiny",
+    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss image-tiny",
+    "build": "npm-run-all pre htmlhint asset webpack-prod postcss image-tiny",
     "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
     "serve-dev-log": "pm2-dev scripts/conf/pm2-dev.json",
     "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
@@ -29,6 +29,7 @@
     "asset": "ncp client/asset client/dist/static",
     "image": "ncp client/static/img client/dist/static/img",
     "image-tiny": "imagemin client/static/img client/dist/static/img",
+    "htmlhint": "htmlhint --config scripts/conf/htmlhint.json {client,server}/**/*.{html,hbs}",
     "pack": "node scripts/task/pack.js",
     "upload": "node scripts/task/upload.js",
     "clean": "rimraf client/dist && rimraf zip && rimraf jsdoc"
@@ -75,6 +76,7 @@
     "glob": "^7.0.3",
     "handlebars-loader": "^1.3.0",
     "html-webpack-plugin": "^2.21.0",
+    "htmlhint": "^0.9.13",
     "imagemin-cli": "^2.1.0",
     "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "^0.5.4",
