--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "^0.5.4",
     "koa-connect-history-api-fallback": "^0.3.0",
-    "koa-postcss-middleware": "^1.0.0",
     "koa-webpack-dev-middleware": "^1.2.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
@@ -93,6 +92,7 @@
     "postcss-reporter": "^1.3.3",
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
+    "rucksack-css": "^0.8.6",
     "scp2": "^0.5.0",
     "style-loader": "^0.13.1",
     "stylelint": "^6.7.1",
