postcss 添加 postcss-assets rucksack-css

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "help": "node scripts/task/help.js",
     "dev": "npm-run-all pre htmlhint --parallel asset image serve-client serve-dev-log",
-    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss image-tiny",
-    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss image-tiny",
+    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss-dev image-tiny",
+    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss-exp image-tiny",
     "build": "npm-run-all pre htmlhint asset webpack-prod postcss image-tiny",
     "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
     "serve-dev-log": "pm2-dev scripts/conf/pm2-dev.json",
@@ -25,7 +25,9 @@
     "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "postcss": "postcss --no-map.inline --config scripts/conf/postcss.json client/static/css/**/[!_]*.css -d client/dist/static/css",
+    "postcss-dev": "cross-env NODE_ENV=development postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
+    "postcss-exp": "cross-env NODE_ENV=experiment postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
+    "postcss": "cross-env NODE_ENV=production postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
     "asset": "ncp client/asset client/dist/static",
     "image": "ncp client/static/img client/dist/static/img",
     "image-tiny": "imagemin client/static/img client/dist/static/img",
@@ -86,6 +88,7 @@
     "moment": "^2.13.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^1.8.0",
+    "postcss-assets": "^4.1.0",
     "postcss-cli": "^2.5.2",
     "postcss-easy-import": "^1.0.1",
     "postcss-loader": "^0.9.1",
