自适应布局 css 优化

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-project-template",
-  "version": "1.4.4",
-  "description": "develop the project based on npm scripts",
+  "version": "1.4.5",
+  "description": "workflows for front-end's project, use npm scripts and enjoy them",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
   "repository": {
@@ -15,7 +15,7 @@
     "dev": "npm-run-all pre htmlhint --parallel asset image serve-client serve-dev-log",
     "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss-dev image-tiny",
     "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss-exp image-tiny",
-    "build": "npm-run-all pre htmlhint asset webpack-prod postcss image-tiny",
+    "build": "npm-run-all pre htmlhint asset webpack postcss image-tiny",
     "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
     "serve-dev-log": "pm2-dev scripts/conf/pm2-dev.json",
     "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
@@ -24,7 +24,7 @@
     "pre": "rimraf client/dist && rimraf jsdoc && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
     "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "webpack-prod": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
+    "webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "postcss-dev": "cross-env NODE_ENV=development postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
     "postcss-exp": "cross-env NODE_ENV=experiment postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
     "postcss": "cross-env NODE_ENV=production postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
@@ -92,6 +92,7 @@
     "postcss-cli": "^2.5.2",
     "postcss-easy-import": "^1.0.1",
     "postcss-loader": "^0.9.1",
+    "postcss-pxtorem": "^3.3.1",
     "postcss-reporter": "^1.3.3",
     "precss": "^1.4.0",
     "rimraf": "^2.5.2",
