--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
     "serve-exp": "pm2 start scripts/conf/pm2-exp.json",
     "serve": "pm2 start scripts/conf/pm2-prod.json",
-    "pre": "rimraf client/dist && rimraf jsdoc && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
+    "pre": "rimraf client/dist && rimraf tmp && rimraf jsdoc && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
     "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
     "webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
@@ -34,7 +34,7 @@
     "htmlhint": "htmlhint --config scripts/conf/htmlhint.json {client,server}/**/*.{html,hbs}",
     "pack": "node scripts/task/pack.js",
     "upload": "node scripts/task/upload.js",
-    "clean": "rimraf client/dist && rimraf zip && rimraf jsdoc"
+    "clean": "rimraf client/dist && rimraf tmp && rimraf zip && rimraf jsdoc"
   },
   "dependencies": {
     "koa": "^1.2.0",
@@ -77,6 +77,7 @@
     "function-bind": "^1.0.2",
     "glob": "^7.0.3",
     "handlebars-loader": "^1.3.0",
+    "happypack": "^2.1.1",
     "html-webpack-plugin": "^2.21.0",
     "htmlhint": "^0.9.13",
     "imagemin-cli": "^2.1.0",
