asset/**/*.bl.js 被 babel-asset 任务处理，可引用 config.json 中的值

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "scripts": {
     "help": "node scripts/task/help.js",
-    "dev": "npm-run-all pre htmlhint --parallel asset image serve-client serve-dev-log",
-    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss-dev image-tiny",
-    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss-exp image-tiny",
-    "build": "npm-run-all pre htmlhint asset webpack postcss image-tiny",
+    "dev": "npm-run-all pre htmlhint  asset image babel-asset-dev --parallel serve-client serve-dev-log",
+    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss-dev babel-asset-dev image-tiny",
+    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss-exp babel-asset-exp image-tiny",
+    "build": "npm-run-all pre htmlhint asset webpack postcss babel-asset image-tiny",
     "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
     "serve-dev-log": "pm2-dev scripts/conf/pm2-dev.json",
     "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
@@ -28,6 +28,9 @@
     "postcss-dev": "cross-env NODE_ENV=development postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
     "postcss-exp": "cross-env NODE_ENV=experiment postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
     "postcss": "cross-env NODE_ENV=production postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
+    "babel-asset-dev": "cross-env NODE_ENV=development node scripts/task/babel-asset.js",
+    "babel-asset-exp": "cross-env NODE_ENV=experiment node scripts/task/babel-asset.js",
+    "babel-asset": "cross-env NODE_ENV=production node scripts/task/babel-asset.js",
     "asset": "ncp client/asset client/dist/static",
     "image": "ncp client/static/img client/dist/static/img",
     "image-tiny": "imagemin client/static/img client/dist/static/img",
@@ -55,6 +58,7 @@
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-plugin-define": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
