--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-project-template",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "workflows for front-end's project, use npm scripts and enjoy them",
   "main": "server/app.js",
   "homepage": "https://github.com/dnxbf321/node-project-template#readme",
@@ -86,7 +86,7 @@
     "imagemin-cli": "^2.1.0",
     "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "^0.5.4",
-    "koa-connect-history-api-fallback": "^0.3.0",
+    "koa-connect-history-api-fallback": "0.3.0",
     "koa-webpack-dev-middleware": "^1.2.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
