--- a/package.json
+++ b/package.json
@@ -1,117 +1,116 @@
 {
-  "name": "node-project-template",
-  "version": "2.1.1",
-  "description": "workflows for front-end's project, use npm scripts and enjoy them",
-  "main": "server/app.js",
-  "homepage": "https://github.com/dnxbf321/node-project-template#readme",
+  "name": "npx",
+  "version": "3.0.0",
+  "description": "Pack static files like html, css, javascript, images and so on. Different environment, different config key-value.",
+  "keywords": [
+    "front-end",
+    "pack static files",
+    "scaffold",
+    "postcss",
+    "sass-like",
+    "ECMAScript 6",
+    "webpack",
+    "babel"
+  ],
+  "main": "bin/index.js",
+  "homepage": "https://github.com/dnxbf321/npx#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://dnxbf321@github.com/dnxbf321/node-project-template.git"
+    "url": "git+https://dnxbf321@github.com/dnxbf321/npx.git"
   },
   "author": "Jason Deng",
   "license": "MIT",
+  "bin": {
+    "npx": "bin/index.js"
+  },
   "scripts": {
     "help": "node scripts/task/help.js",
-    "dev": "npm-run-all pre htmlhint  asset image babel-asset-dev --parallel serve-client serve-dev-log",
-    "build-dev": "npm-run-all pre htmlhint asset webpack-dev postcss-dev babel-asset-dev image-tiny",
-    "build-exp": "npm-run-all pre htmlhint asset webpack-exp postcss-exp babel-asset-exp image-tiny",
-    "build": "npm-run-all pre htmlhint asset webpack postcss babel-asset image-tiny",
-    "serve-client": "cross-env NODE_ENV=development node scripts/task/webpack-dev-server.js",
-    "serve-dev-log": "pm2-dev scripts/conf/pm2-dev.json",
-    "serve-dev": "pm2 start scripts/conf/pm2-dev.json",
-    "serve-exp": "pm2 start scripts/conf/pm2-exp.json",
-    "serve": "pm2 start scripts/conf/pm2-prod.json",
-    "pre": "rimraf client/dist && rimraf tmp && rimraf jsdoc && mkdirp client/dist/static/img && mkdirp client/dist/static/css && mkdirp client/dist/static/js",
-    "webpack-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "webpack-exp": "cross-env NODE_ENV=experiment webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules --config scripts/conf/webpack-prod-conf.js",
-    "postcss-dev": "cross-env NODE_ENV=development postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
-    "postcss-exp": "cross-env NODE_ENV=experiment postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
-    "postcss": "cross-env NODE_ENV=production postcss --no-map.inline --config scripts/conf/postcss.js client/static/css/**/[!_]*.css -d client/dist/static/css",
-    "babel-asset-dev": "cross-env NODE_ENV=development node scripts/task/babel-asset.js",
-    "babel-asset-exp": "cross-env NODE_ENV=experiment node scripts/task/babel-asset.js",
-    "babel-asset": "cross-env NODE_ENV=production node scripts/task/babel-asset.js",
-    "asset": "ncp client/asset client/dist/static",
-    "image": "ncp client/static/img client/dist/static/img",
-    "image-tiny": "imagemin client/static/img client/dist/static/img",
-    "htmlhint": "htmlhint --config scripts/conf/htmlhint.json {client,server}/**/*.{html,hbs}",
-    "pack": "node scripts/task/pack.js",
-    "upload": "node scripts/task/upload.js",
-    "clean": "rimraf client/dist && rimraf tmp && rimraf zip && rimraf jsdoc"
+    "dev": "npm-run-all pre asset image babel-asset-dev --parallel serve-client",
+    "build-dev": "npm-run-all pre asset webpack-dev postcss-dev babel-asset-dev image-tiny",
+    "build-exp": "npm-run-all pre asset webpack-exp postcss-exp babel-asset-exp image-tiny",
+    "build": "npm-run-all pre asset webpack postcss babel-asset image-tiny",
+    "serve-client": "npx serve-client",
+    "pre": "npx pre",
+    "webpack-dev": "npx webpack -e development",
+    "webpack-exp": "npx webpack -e experiment",
+    "webpack": "npx webpack -e production",
+    "postcss-dev": "npx postcss -e development",
+    "postcss-exp": "npx postcss -e experiment",
+    "postcss": "npx postcss -e production",
+    "babel-asset-dev": "npx babel-asset -e development",
+    "babel-asset-exp": "npx babel-asset -e experiment",
+    "babel-asset": "npx babel-asset -e production",
+    "asset": "npx asset",
+    "image": "npx image",
+    "image-tiny": "npx image -o",
+    "pack": "npx pack",
+    "upload": "npx upload",
+    "clean": "npx clean"
   },
   "dependencies": {
-    "koa": "^1.2.0",
-    "koa-bodyparser": "^2.2.0",
-    "koa-compress": "^1.0.9",
-    "koa-hbs": "^0.8.0",
-    "koa-logger": "^1.3.0",
-    "koa-onerror": "^1.3.1",
-    "koa-router": "^5.4.0",
-    "koa-session": "^3.3.1",
-    "koa-static": "^2.0.0",
-    "koa-proxy": "^0.6.0",
-    "vue": "^1.0.24"
-  },
-  "devDependencies": {
-    "archiver": "^1.0.0",
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.1.4",
-    "babel-plugin-define": "^1.0.0",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-runtime": "^6.9.2",
-    "colors": "^1.1.2",
-    "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
-    "cssnano": "^3.6.2",
-    "eslint": "^2.11.1",
-    "eslint-config-standard": "^5.3.1",
-    "eslint-friendly-formatter": "^1.2.2",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^1.5.1",
-    "eslint-plugin-promise": "^1.3.1",
-    "eslint-plugin-standard": "^1.3.2",
-    "eventsource-polyfill": "^0.9.6",
-    "extend": "^3.0.0",
-    "file-loader": "^0.8.4",
-    "function-bind": "^1.0.2",
-    "glob": "^7.0.3",
-    "handlebars-loader": "^1.3.0",
-    "happypack": "^2.1.1",
-    "html-webpack-plugin": "^2.21.0",
-    "htmlhint": "^0.9.13",
-    "imagemin-cli": "^2.1.0",
+    "archiver": "1.0.0",
+    "autoprefixer": "6.3.6",
+    "babel-core": "6.9.1",
+    "babel-loader": "6.2.4",
+    "babel-plugin-add-module-exports": "0.1.4",
+    "babel-plugin-define": "1.0.0",
+    "babel-plugin-transform-runtime": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-stage-2": "6.5.0",
+    "babel-runtime": "6.9.2",
+    "colors": "1.1.2",
+    "css-loader": "0.23.1",
+    "cssnano": "3.6.2",
+    "eslint": "2.11.1",
+    "eslint-config-standard": "5.3.1",
+    "eslint-friendly-formatter": "1.2.2",
+    "eslint-loader": "1.3.0",
+    "eslint-plugin-html": "1.5.1",
+    "eslint-plugin-promise": "1.3.1",
+    "eslint-plugin-standard": "1.3.2",
+    "eventsource-polyfill": "0.9.6",
+    "extend": "3.0.0",
+    "file-loader": "0.8.4",
+    "function-bind": "1.0.2",
+    "glob": "7.0.3",
+    "handlebars": "^4.0.5",
+    "handlebars-loader": "1.3.0",
+    "happypack": "2.1.1",
+    "html-webpack-plugin": "2.21.0",
+    "imagemin": "5.2.2",
+    "imagemin-jpegtran": "5.0.2",
+    "imagemin-optipng": "5.1.1",
+    "imagemin-svgo": "5.1.0",
     "jsdoc-webpack-plugin": "0.0.1",
-    "json-loader": "^0.5.4",
+    "json-loader": "0.5.4",
+    "koa": "1.2.0",
     "koa-connect-history-api-fallback": "0.3.0",
-    "koa-webpack-dev-middleware": "^1.2.1",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.13.0",
-    "ncp": "^2.0.0",
-    "npm-run-all": "^1.8.0",
-    "postcss-assets": "^4.1.0",
-    "postcss-cli": "^2.5.2",
-    "postcss-easy-import": "^1.0.1",
-    "postcss-loader": "^0.9.1",
-    "postcss-pxtorem": "^3.3.1",
-    "postcss-reporter": "^1.3.3",
-    "precss": "^1.4.0",
-    "rimraf": "^2.5.2",
-    "rucksack-css": "^0.8.6",
-    "scp2": "^0.5.0",
-    "style-loader": "^0.13.1",
-    "stylelint": "^6.7.1",
-    "stylelint-config-standard": "^9.0.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.5.2",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.1",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.14.0"
+    "koa-static": "2.0.0",
+    "koa-webpack-dev-middleware": "1.2.1",
+    "mkdirp": "0.5.1",
+    "moment": "2.13.0",
+    "ncp": "2.0.0",
+    "npm-run-all": "1.8.0",
+    "postcss-assets": "4.1.0",
+    "postcss-cli": "2.5.2",
+    "postcss-easy-import": "1.0.1",
+    "postcss-loader": "0.9.1",
+    "postcss-pxtorem": "3.3.1",
+    "postcss-reporter": "1.3.3",
+    "precss": "1.4.0",
+    "rimraf": "2.5.2",
+    "rucksack-css": "0.8.6",
+    "scp2": "0.5.0",
+    "style-loader": "0.13.1",
+    "stylelint": "6.7.1",
+    "stylelint-config-standard": "9.0.0",
+    "url-loader": "0.5.7",
+    "vue-hot-reload-api": "1.3.2",
+    "vue-html-loader": "1.2.2",
+    "vue-loader": "8.5.2",
+    "vue-style-loader": "1.0.0",
+    "webpack": "1.13.1",
+    "webpack-hot-middleware": "2.6.0",
+    "webpack-merge": "0.14.0"
   }
 }
