--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "npx",
-  "version": "3.0.0",
+  "name": "deng-npx",
+  "version": "3.0.1",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different config key-value.",
   "keywords": [
     "front-end",
@@ -24,28 +24,26 @@
     "npx": "bin/index.js"
   },
   "scripts": {
-    "help": "node scripts/task/help.js",
     "dev": "npm-run-all pre asset image babel-asset-dev --parallel serve-client",
-    "build-dev": "npm-run-all pre asset webpack-dev postcss-dev babel-asset-dev image-tiny",
-    "build-exp": "npm-run-all pre asset webpack-exp postcss-exp babel-asset-exp image-tiny",
-    "build": "npm-run-all pre asset webpack postcss babel-asset image-tiny",
-    "serve-client": "npx serve-client",
-    "pre": "npx pre",
-    "webpack-dev": "npx webpack -e development",
-    "webpack-exp": "npx webpack -e experiment",
-    "webpack": "npx webpack -e production",
-    "postcss-dev": "npx postcss -e development",
-    "postcss-exp": "npx postcss -e experiment",
-    "postcss": "npx postcss -e production",
-    "babel-asset-dev": "npx babel-asset -e development",
-    "babel-asset-exp": "npx babel-asset -e experiment",
-    "babel-asset": "npx babel-asset -e production",
-    "asset": "npx asset",
-    "image": "npx image",
-    "image-tiny": "npx image -o",
-    "pack": "npx pack",
-    "upload": "npx upload",
-    "clean": "npx clean"
+    "build-dev": "npm-run-all pre asset image webpack-dev postcss-dev babel-asset-dev",
+    "build-exp": "npm-run-all pre asset image webpack-exp postcss-exp babel-asset-exp",
+    "build": "npm-run-all pre asset image webpack postcss babel-asset",
+    "serve-client": "bin/index.js serve-client",
+    "pre": "bin/index.js pre",
+    "webpack-dev": "bin/index.js webpack -e development",
+    "webpack-exp": "bin/index.js webpack -e experiment",
+    "webpack": "bin/index.js webpack -e production",
+    "postcss-dev": "bin/index.js postcss -e development",
+    "postcss-exp": "bin/index.js postcss -e experiment",
+    "postcss": "bin/index.js postcss -e production",
+    "babel-asset-dev": "bin/index.js babel-asset -e development",
+    "babel-asset-exp": "bin/index.js babel-asset -e experiment",
+    "babel-asset": "bin/index.js babel-asset -e production",
+    "asset": "bin/index.js asset",
+    "image": "bin/index.js image",
+    "pack": "bin/index.js pack",
+    "upload": "bin/index.js upload",
+    "clean": "bin/index.js clean"
   },
   "dependencies": {
     "archiver": "1.0.0",
@@ -77,10 +75,6 @@
     "handlebars-loader": "1.3.0",
     "happypack": "2.1.1",
     "html-webpack-plugin": "2.21.0",
-    "imagemin": "5.2.2",
-    "imagemin-jpegtran": "5.0.2",
-    "imagemin-optipng": "5.1.1",
-    "imagemin-svgo": "5.1.0",
     "jsdoc-webpack-plugin": "0.0.1",
     "json-loader": "0.5.4",
     "koa": "1.2.0",
