--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deng-npx",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Pack static files like html, css, javascript, images and so on. Different environment, different config key-value.",
   "keywords": [
     "front-end",
@@ -23,27 +23,27 @@
   "bin": {
     "npx": "bin/index.js"
   },
-  "scripts": {
+  "scripts-example": {
     "dev": "npm-run-all pre asset image babel-asset-dev --parallel serve-client",
     "build-dev": "npm-run-all pre asset image webpack-dev postcss-dev babel-asset-dev",
     "build-exp": "npm-run-all pre asset image webpack-exp postcss-exp babel-asset-exp",
     "build": "npm-run-all pre asset image webpack postcss babel-asset",
-    "serve-client": "bin/index.js serve-client",
-    "pre": "bin/index.js pre",
-    "webpack-dev": "bin/index.js webpack -e development",
-    "webpack-exp": "bin/index.js webpack -e experiment",
-    "webpack": "bin/index.js webpack -e production",
-    "postcss-dev": "bin/index.js postcss -e development",
-    "postcss-exp": "bin/index.js postcss -e experiment",
-    "postcss": "bin/index.js postcss -e production",
-    "babel-asset-dev": "bin/index.js babel-asset -e development",
-    "babel-asset-exp": "bin/index.js babel-asset -e experiment",
-    "babel-asset": "bin/index.js babel-asset -e production",
-    "asset": "bin/index.js asset",
-    "image": "bin/index.js image",
-    "pack": "bin/index.js pack",
-    "upload": "bin/index.js upload",
-    "clean": "bin/index.js clean"
+    "serve-client": "npx serve-client",
+    "pre": "npx pre",
+    "webpack-dev": "npx webpack -e development",
+    "webpack-exp": "npx webpack -e experiment",
+    "webpack": "npx webpack -e production",
+    "postcss-dev": "npx postcss -e development",
+    "postcss-exp": "npx postcss -e experiment",
+    "postcss": "npx postcss -e production",
+    "babel-asset-dev": "npx babel-asset -e development",
+    "babel-asset-exp": "npx babel-asset -e experiment",
+    "babel-asset": "npx babel-asset -e production",
+    "asset": "npx asset",
+    "image": "npx image",
+    "pack": "npx pack",
+    "upload": "npx upload",
+    "clean": "npx clean"
   },
   "dependencies": {
     "archiver": "1.0.0",
